# ness

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml  run-clippy-and-test.yml
core/: Cargo.toml  build.rs
core/src/: apu.rs  cart.rs  controllers.rs  cpu.rs  emu.rs  lib.rs  ppu.rs  schedule.rs  wram.rs
core/src/apu/: dsp.rs  spc700.rs
core/src/apu/dsp/: channel.rs  freq_counter.rs  io.rs
core/src/apu/spc700/: bus.rs  disasm.rs  interpreter.rs  regs.rs  timers.rs
core/src/apu/spc700/disasm/: common.rs  instrs.rs
core/src/apu/spc700/interpreter/: alu.rs  branches.rs  common.rs  other.rs  transfers.rs
core/src/cart/: db.rs  info.rs  map.rs
core/src/cart/info/: db.rs  guess.rs  header.rs
core/src/cart/info/db/: bml.rs  boards.rs  carts.rs
core/src/controllers/: empty.rs  joypad.rs
core/src/cpu/: bus.rs  common.rs  disasm.rs  dma.rs  interpreter.rs  irqs.rs  math.rs  regs.rs
core/src/cpu/bus/: access.rs  timings.rs
core/src/cpu/disasm/: common.rs  instrs.rs
core/src/cpu/interpreter/: alu.rs  branches.rs  common.rs  mem.rs  other.rs  transfers.rs
core/src/emu/: schedule.rs
core/src/ppu/: bgs.rs  bgs_objs.rs  bgs_objs_mosaic.rs  counters.rs  latched_counters.rs  mode7.rs  oam.rs  palette.rs  render.rs  vram.rs  windows_math.rs
db/: boards.bml  carts.bml
frontend/desktop/: Cargo.toml
frontend/desktop/src/: audio.rs  config.rs  debug_views.rs  emu.rs  input.rs  main.rs  ui.rs  utils.rs
frontend/desktop/src/audio/: cpal.rs
frontend/desktop/src/config/: saves.rs
frontend/desktop/src/debug_views/: common.rs  cpu_disasm.rs  cpu_memory.rs  cpu_state.rs  spc_disasm.rs  spc_memory.rs  spc_state.rs
frontend/desktop/src/debug_views/common/: memory.rs  regs.rs
frontend/desktop/src/debug_views/common/memory/: y_pos.rs
frontend/desktop/src/input/: editor.rs  keymap.rs
frontend/desktop/src/ui/: window.rs
frontend/desktop/src/ui/imgui_log/: console.rs
frontend/web/: package.json  tsconfig.json  webpack.config.js
frontend/web/crate/: Cargo.toml
frontend/web/crate/src/: lib.rs
frontend/web/src/: index.html  main.less  message.ts
frontend/web/src/emu/: emu.ts
frontend/web/src/shaders/: screen.vert
frontend/web/src/ui/: files.ts  ui.ts
