[workspace]
members = [
    "core",
    "frontend/desktop",
]
resolver = "2"

[profile.release]
debug = true
panic = "abort"

[profile.ci]
inherits = "release"
debug = false
lto = true
codegen-units = 1

[patch.crates-io]
winit = { git = "https://github.com/emilk/winit", branch = "fix-native-file-dialogs" } # TODO: https://github.com/rust-windowing/winit/pull/2027
