[package]
name = "ness-core"
version = "0.0.0"
edition = "2021"
publish = false

[features]
log = ["slog"]

[dependencies]
emu-utils = { git = "https://github.com/Kelpsy/emu-utils" }
bitflags = "1.2"
cfg-if = "1.0"
slog = { version = "2.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
