[package]
name = "ness-desktop"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["debug-views", "imgui-log"]

debug-views = ["fxhash", "bitflags"]
async-term-log = ["term-log", "slog-async"]
term-log = ["log", "slog-term"]
imgui-log = ["log"]

log = ["slog", "ness-core/log"]

compile-shaders = ["shaderc"]

[dependencies]
ness-core = { path = "../../core" }
bitflags = { version = "1.3", optional = true }
fxhash = { version = "0.2", optional = true }
winit = "0.25"
wgpu = { version = "0.11", features = ["spirv"] }
futures-executor = "0.3"
imgui = "0.8"
imgui-winit-support = "0.8"
crossbeam-channel = "0.5"
slog = { version = "2.7", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slog-term = { version = "2.8", optional = true }
slog-async = { version = "2.6", optional = true }
rfd = "0.5"
home = "0.5"

[build-dependencies]
shaderc = { version = "0.7", optional = true }
