[package]
name = "ness-desktop"
version = "0.0.0"
edition = "2021"
publish = false

[features]
default = ["debug-views", "log", "discord-presence"]

debug-views = ["fxhash", "bitflags", "ness-core/disasm"]
log = ["slog", "slog-term", "slog-async", "ness-core/log"]
discord-presence = ["discord-rpc"]

compile-shaders = ["shaderc"]

[dependencies]
ness-core = { path = "../../core" }
bitflags = { version = "1.3", optional = true }
fxhash = { version = "0.2", optional = true }
winit = { version = "0.25", features = ["serde"] }
wgpu = { version = "0.11", features = ["spirv"] }
futures-executor = "0.3"
imgui = "0.8"
imgui-winit-support = "0.8"
crossbeam-channel = "0.5"
slog = { version = "2.7", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
slog-term = { version = "2.8", optional = true }
slog-async = { version = "2.6", optional = true }
rfd = "0.5"
home = "0.5"
sha2 = "0.9"
parking_lot = "0.11"
cpal = "0.13"
discord-rpc = { git = "https://github.com/Kelpsy/discord-rpc", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24" # TODO: Remove when https://github.com/rust-windowing/winit/issues/2022 is closed

[build-dependencies]
shaderc = { version = "0.7", optional = true }
